# ClinicFlow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/backend/: __init__.py  main.py
app/backend/ai/: __init__.py  cliente.py  despachador.py  intenciones.py
app/backend/api/: __init__.py  deps.py  templates.py
app/backend/bot/: __init__.py  interactive_telegram.py
app/backend/core/: __init__.py  config.py  database.py  rut.py  security.py  seed.py
app/backend/domain/: __init__.py  agenda.py  citas.py  clinica.py  derivacion.py  enums.py  errores.py  especialidades.py  lista_espera.py  test.py  usuarios.py
app/backend/events/: __init__.py
app/backend/models/: __init__.py  agenda.py  citas.py  clinica.py  conversacion.py  derivacion.py  especialidades.py  lista_espera.py  mensajes.py  oferta_cupo.py  usuarios.py
app/backend/repositories/: __init__.py  agendas.py  base.py  citas.py  clinica.py  conversacion.py  derivaciones.py  (+3 more)
docs/: enunciado.md
docs/prompts/: README.md
tests/: __init__.py  conftest.py
tests/unit/: test_ai_cliente.py  test_ai_despachador.py  test_ai_intenciones.py  test_asistente_endpoint.py  test_bot_telegram.py  test_conversacion_repo.py  test_derivacion_al_reservar.py  test_derivaciones_web.py  test_dominio_agenda.py  test_dominio_citas.py  test_dominio_derivaciones.py  test_dominio_lista_espera.py  test_dominio_usuarios.py  test_gestion_citas.py  test_health.py  test_liberacion_cupo.py  test_mis_citas_web.py  test_registro_web.py
(+54 files in other folders)
